# novometis

./: .gitmodules  README.md
polymetis/: CMakeLists.txt  environment.yml  environment_client.yml  requirements.txt
polymetis/python/torchcontrol/models/: torchscript_pinocchio.py
polymetis/python/torchcontrol/transform/: rotation.py
polymetis/src/clients/: empty_statistics_client.cpp
polymetis/torch_isolation/: CMakeLists.txt
polymetis/torch_isolation/pinocchio_isolation/: CMakeLists.txt
